# askjeff

./: .dockerignore  .eslintignore  .final-optimization-summary.md  .frontend-optimization-report.md  .gitignore  .markdownlint.yaml  .optimization-task.md  .pre-commit-config.yaml  .prettierignore  .sorftime-refactor-progress.md  .sorftime-test-refactor-plan.md  AGENTS.md  BUG-REPORT.md  DONE.md  Makefile  README-OPTIMIZATION.md  README.md  SUMMARY.md  docker-compose.jdc.yml  quick_check_api_logs.sh  ssh_public_key.txt  start-jdc.sh  temp_migration.py  temp_migration_2.py  工程师建议.md
backend/: .coverage  Dockerfile.jdc  alembic.ini  analyze_api_logs.py  celerybeat-schedule  debug_delete_all.py  debug_export_run.py  init_data.py  pyproject.toml  reset_password.py  ruff.toml  test.xlsx
backend/app/: celery_app.py  config.py  db.py  main.py
backend/config/: import_mapping.example.yaml  import_mapping.yaml
backend/migrations/: 008_add_api_import_fields.py  env.py
backend/scripts/: check_api_response.py  check_batch6.py  check_batch_data.py  check_latest_error.py  clear_data.py  debug_db_content.py  debug_logs.py  debug_sorftime_api.py  document_mcp_tools.py  init_admin.py  init_data.py  init_mock_data.py  inspect_schema.py  migrate_add_hash.py  migrate_create_users.py  mock_ads_data.py  print_routes.py  query_api_logs.py  restore.py  seed_rich_data.py  test_mcp_bestsellers.py  test_mcp_endpoint.py  verify_import_progress.py  verify_jdc_alignment.py  verify_serialization.py
backend/tests/: conftest.py  manual_backup_test.py  manual_login_test.py  reproduce_extraction.py  test_ads_analysis_api.py  test_ads_analysis_service.py  test_ads_models.py  test_api_import_parse.py  (+8 more)
(+436 files in other folders)
