[tool.poetry]
name = "sorftime-backend"
version = "0.1.0"
description = "FastAPI 服务"
authors = ["AskJeff <dev@askjeff.local>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
uvicorn = {extras=["standard"], version="^0.29.0"}
pydantic = "^2.7.0"
sqlalchemy = "^2.0.29"
psycopg = {version = "^3.1.18", extras = ["binary"]}
alembic = "^1.13.1"
httpx = "^0.27.0"
python-multipart = "^0.0.9"
openpyxl = "^3.1.2"
pandas = "^2.2.2"
PyYAML = "^6.0.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
argon2-cffi = "^23.1.0"
psutil = "^6.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
pytest-asyncio = "^0.23.5"
httpx = "^0.27.0"
ruff = "^0.4.2"
respx = "^0.22.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["poetry-core>=1.6.0"]
build-backend = "poetry.core.masonry.api"
